update ui & alignment issue resolved

--- a/public/frontend/css/footer.css
+++ b/public/frontend/css/footer.css
@@ -26,7 +26,7 @@ ul {
 }
 
 .social-links{
-	text-align: center;
+	text-align: left;
 }
 
 .footer-col h3 {
@@ -48,7 +48,7 @@ ul {
 	text-transform: capitalize;
 	text-decoration: none;
 	transition: all 0.3s ease;
-	padding: 8px;
+	padding: 8px 8px 8px 0px;
 	font-family: Times New Roman;
 }
 
@@ -65,7 +65,7 @@ ul {
     width: 40px;
     border-radius: 70%;
     text-align: center;
-    margin: 5px;
+    margin: 5px 5px 5px 0px;
     line-height: 40px;
     transition: all 0.5s ease;
     background: #252525;
